Update title and structure of terms page

--- a/terms/index.html
+++ b/terms/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms and Conditions</title>
+    <title>Terms and Conditions - GILTON</title>
     <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
     <link rel="shortcut icon" href="/favicon/favicon.ico" />
@@ -12,79 +12,141 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header Navigation -->
     <div class="header">
-        <a href="/"><i class="fas fa-home icon"></i></a>
-        <a href="#"><i class="fab fa-discord icon"></i></a>
-        <a href="https://x.com/gilton_win"><i class="fab fa-twitter icon"></i></a>
+        <a href="/" class="header-logo"><img src="/img/box.png" alt="GILTON Logo" class="logo-img"></a>
+        <ul class="nav-links">
+            <li><a href="/">Home</a></li>
+            <li><a href="/tokenomics/">Tokenomics</a></li>
+            <li><a href="/terms/">Terms</a></li>
+        </ul>
     </div>
 
+    <!-- Main Content -->
     <div class="content">
         <div class="page-wrapper">
+            <div class="breadcrumb">
+                <a href="/"><i class="fas fa-home"></i> Home</a>
+                <span>/</span>
+                <span>Terms & Conditions</span>
+            </div>
+
             <h1 class="page-title">Terms and Conditions</h1>
-            <p class="page-date">Last Modified: January 28, 2025</p>
+            <p class="page-date"><i class="fas fa-calendar-alt"></i> Last Modified: January 28, 2025</p>
 
             <section class="page-section">
-                <h2>1. Nature of GILTON</h2>
+                <div class="section-header">
+                    <div class="section-number">1</div>
+                    <h2>Nature of GILTON</h2>
+                </div>
                 <p>
-                    GILTON token ("GILTON COIN" or "$GTN") are intended to function solely as an expression of support for, and engagement with, the ideals and beliefs embodied by the symbol "$GTN" and the associated artwork. GILTON COIN is not intended to be, nor should it be construed as, an investment opportunity, investment contract, or security of any type.
+                    GILTON or $GTN are intended to function solely as an expression of support for, and engagement with, the ideals and beliefs embodied by the symbol "$GTN" and the associated artwork. GILTON or $GTN is not intended to be, nor should it be construed as, an investment opportunity, investment contract, or security of any type.
                 </p>
             </section>
 
             <section class="page-section">
-                <h2>2. Acknowledgments</h2>
-                <p>By acquiring, holding, or using GILTON COIN, you expressly acknowledge and agree that:</p>
-                <ul>
-                    <li>You have no expectation of financial return or profit from acquiring GILTON COIN.</li>
-                    <li>You acquire no rights to ownership, control, or management of any entity through your possession of GILTON COIN.</li>
-                    <li>The value of GILTON COIN may be subject to extreme volatility, and you may experience a complete loss of value.</li>
-                    <li>No representations or warranties are made regarding future value or utility of GILTON COIN.</li>
-                    <li>You are solely responsible for any tax obligations arising from your acquisition, holding, or disposition of GILTON COIN.</li>
+                <div class="section-header">
+                    <div class="section-number">2</div>
+                    <h2>Acknowledgments</h2>
+                </div>
+                <p>By acquiring, holding, or using GILTON or $GTN, you expressly acknowledge and agree that:</p>
+                <ul class="styled-list">
+                    <li><i class="fas fa-check"></i> You have no expectation of financial return or profit from acquiring GILTON or $GTN.</li>
+                    <li><i class="fas fa-check"></i> You acquire no rights to ownership, control, or management of any entity through your possession of GILTON or $GTN.</li>
+                    <li><i class="fas fa-check"></i> The value of GILTON or $GTN may be subject to extreme volatility, and you may experience a complete loss of value.</li>
+                    <li><i class="fas fa-check"></i> No representations or warranties are made regarding future value or utility of GILTON or $GTN.</li>
+                    <li><i class="fas fa-check"></i> You are solely responsible for any tax obligations arising from your acquisition, holding, or disposition of GILTON or $GTN.</li>
                 </ul>
             </section>
 
             <section class="page-section">
-                <h2>3. Jurisdictional Restrictions</h2>
+                <div class="section-header">
+                    <div class="section-number">3</div>
+                    <h2>Jurisdictional Restrictions</h2>
+                </div>
                 <p>
-                    GILTON COIN is not available to persons or entities in restricted jurisdictions. Users must verify compliance with local laws before acquisition.
+                    GILTON or $GTN is not available to persons or entities in restricted jurisdictions. Users must verify compliance with local laws before acquisition.
                 </p>
             </section>
 
             <section class="page-section">
-                <h2>4. Disclaimers</h2>
+                <div class="section-header">
+                    <div class="section-number">4</div>
+                    <h2>Disclaimers</h2>
+                </div>
                 <p>To the maximum extent permitted by law:</p>
-                <ul>
-                    <li>GILTON COIN is provided "AS IS" and "AS AVAILABLE" without warranties of any kind.</li>
-                    <li>No liability is assumed for any blockchain network issues.</li>
-                    <li>No responsibility is taken for third-party trading platforms.</li>
-                    <li>All transactions are final and non-refundable.</li>
-                    <li>Past performance does not indicate future results.</li>
+                <ul class="styled-list">
+                    <li><i class="fas fa-alert-circle"></i> GILTON or $GTN is provided "AS IS" and "AS AVAILABLE" without warranties of any kind.</li>
+                    <li><i class="fas fa-alert-circle"></i> No liability is assumed for any blockchain network issues.</li>
+                    <li><i class="fas fa-alert-circle"></i> No responsibility is taken for third-party trading platforms.</li>
+                    <li><i class="fas fa-alert-circle"></i> All transactions are final and non-refundable.</li>
+                    <li><i class="fas fa-alert-circle"></i> Past performance does not indicate future results.</li>
                 </ul>
             </section>
 
             <section class="page-section">
-                <h2>5. Risk Factors</h2>
-                <p>Users explicitly assume all risks associated with GILTON COIN, including but not limited to:</p>
-                <ul>
-                    <li>Risks inherent in blockchain technology and cryptocurrency networks.</li>
-                    <li>Changes in regulatory environment.</li>
-                    <li>Security of digital wallets.</li>
-                    <li>Market volatility.</li>
-                    <li>Technical failures or bugs.</li>
+                <div class="section-header">
+                    <div class="section-number">5</div>
+                    <h2>Risk Factors</h2>
+                </div>
+                <p>Users explicitly assume all risks associated with GILTON or $GTN, including but not limited to:</p>
+                <ul class="styled-list">
+                    <li><i class="fas fa-exclamation-triangle"></i> Risks inherent in blockchain technology and cryptocurrency networks.</li>
+                    <li><i class="fas fa-exclamation-triangle"></i> Changes in regulatory environment.</li>
+                    <li><i class="fas fa-exclamation-triangle"></i> Security of digital wallets.</li>
+                    <li><i class="fas fa-exclamation-triangle"></i> Market volatility.</li>
+                    <li><i class="fas fa-exclamation-triangle"></i> Technical failures or bugs.</li>
                 </ul>
             </section>
 
-            <p><strong>By using GILTON COIN, you acknowledge that you have read these Terms and Conditions, understand them, and agree to be bound by them.</strong></p>
+            <div class="acknowledgment-box">
+                <p><strong>By using GILTON or $GTN, you acknowledge that you have read these Terms and Conditions, understand them, and agree to be bound by them.</strong></p>
+            </div>
         </div>
     </div>
 
-    <div class="footer">
-        <p><a href="/tokenomics" id="linkline" class="link-3">Tokenomics</a></p>
-        <p><a href="/terms" id="linkline" class="link-3">Terms</a></p>
-    </div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>About GILTON</h3>
+                <p>GILTON is a community-driven token project focused on innovation, transparency, and sustainable growth.</p>
+            </div>
+            <div class="footer-section">
+                <h3>Quick Links</h3>
+                <ul class="footer-links">
+                    <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="/tokenomics/"><i class="fas fa-chart-pie"></i> Tokenomics</a></li>
+                    <li><a href="/terms/"><i class="fas fa-file-alt"></i> Terms</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Connect With Us</h3>
+                <p style="margin-bottom: 15px; font-size: 0.9rem; color: #a0a0a0;">Join our community</p>
+                <div class="footer-social">
+                    <a href="#" target="_blank" rel="noopener noreferrer" title="Twitter" aria-label="Twitter">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#" target="_blank" rel="noopener noreferrer" title="Discord" aria-label="Discord">
+                        <i class="fab fa-discord"></i>
+                    </a>
+                    <a href="#" target="_blank" rel="noopener noreferrer" title="Telegram" aria-label="Telegram">
+                        <i class="fab fa-telegram"></i>
+                    </a>
+                    <a href="#" target="_blank" rel="noopener noreferrer" title="GitHub" aria-label="GitHub">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024-2026 GILTON. All rights reserved. | <a href="/terms/">Terms & Conditions</a></p>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
